--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://findicons.com/files/icons/2837/health/512/home_icon.png"
-    />
+    <link rel="icon" href="https://i.ibb.co/WFRFXb7/mainlogo.png" />
+    <img rel="icon" src="https://ibb.co/ZXWqHkZ" alt="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
