aos animation added

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta charset="utf-8" />
     <link rel="icon" href="https://i.ibb.co/WFRFXb7/mainlogo.png" />
     <img rel="icon" src="https://ibb.co/ZXWqHkZ" alt="" />
@@ -42,5 +43,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({ offset: 400, duration: 1500 });
+    </script>
   </body>
 </html>
